--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
     environment:
       FRONTEND_URL: "https://3000-${HOSTNAME}"
       BACKEND_URL: "https://4567-${HOSTNAME}"
+      OTEL_EXPORTER_OTLP_ENDPOINT: "https://api.honeycomb.io"
+      OTEL_EXPORTER_OTLP_HEADERS: "x-honeycomb-team=${HONEYCOMB_API_KEY}"
+      #OTEL_SERVICE_NAME: "${HONEYCOMB_SERVICE_NAME}"
+      OTEL_SERVICE_NAME: "cruddur-backend-flask"
     build: ./backend-flask
     ports:
       - "4567:4567"
