add: AWS Cloudwatch logging

--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -1,6 +1,7 @@
 python-dotenv
 flask
 flask-cors
+
 opentelemetry-api 
 opentelemetry-sdk 
 opentelemetry-exporter-otlp-proto-http 
@@ -8,3 +9,4 @@ opentelemetry-instrumentation-flask
 opentelemetry-instrumentation-requests
 
 aws-xray-sdk
+watchtower
