--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,17 +4,22 @@ services:
     environment:
       FRONTEND_URL: "https://3000-${HOSTNAME}"
       BACKEND_URL: "https://4567-${HOSTNAME}"
+      AWS_XRAY_URL: "*4567-${HOSTNAME}*"
+      AWS_XRAY_DAEMON_ADDRESS: "xray-daemon:2000"
       OTEL_EXPORTER_OTLP_ENDPOINT: "https://api.honeycomb.io"
       OTEL_EXPORTER_OTLP_HEADERS: "x-honeycomb-team=${HONEYCOMB_API_KEY}"
       #OTEL_SERVICE_NAME: "${HONEYCOMB_SERVICE_NAME}"
       OTEL_SERVICE_NAME: "cruddur-backend-flask"
-      AWS_XRAY_URL: "*4567-${HOSTNAME}*"
-      AWS_XRAY_DAEMON_ADDRESS: "xray-daemon:2000"
+      AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
+      AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+      AWS_DEFAULT_REGION: "${AWS_DEFAULT_REGION}"
+
     build: ./backend-flask
     ports:
       - "4567:4567"
     volumes:
       - ./backend-flask:/backend-flask
+
   frontend-react-js:
     environment:
       REACT_APP_BACKEND_URL: "https://4567-${HOSTNAME}"
@@ -23,6 +28,7 @@ services:
       - "3000:3000"
     volumes:
       - ./frontend-react-js:/frontend-react-js
+
   db:
     image: postgres:13-alpine
     restart: always
@@ -33,6 +39,7 @@ services:
       - '5432:5432'
     volumes: 
       - db:/var/lib/postgresql/data
+
   dynamodb-local:
     # https://stackoverflow.com/questions/67533058/persist-local-dynamodb-data-in-volumes-lack-permission-unable-to-open-databa
     # We needed to add user:root to get this working.
@@ -45,12 +52,13 @@ services:
     volumes:
       - "./docker/dynamodb:/home/dynamodblocal/data"
     working_dir: /home/dynamodblocal
+
   xray-daemon:
     image: "amazon/aws-xray-daemon"
     environment:
       AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
       AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
-      AWS_REGION: "us-east-2"
+      AWS_REGION: "${AWS_DEFAULT_REGION}"
     command:
       - "xray -o -b xray-daemon:2000"
     ports:
